logs/5360840.err
  File "/panfs/roc/groups/7/cough052/barna314/nmma_fitter/make_jobs.py", line 29
    try: ## spaghetti 
                     ^
IndentationError: unindent does not match any outer indentation level
